# fontforge

fontforge/: CMakeLists.txt  parsettfatt.c  start.c  tottfgpos.c
inc/: CMakeLists.txt
